--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,14 +3,7 @@
 	"image": "mcr.microsoft.com/devcontainers/php:1-8.3-bullseye",
 
 	"features": {
-		"ghcr.io/devcontainers/features/git:1": {},
-		"ghcr.io/devcontainers/features/composer:2": {
-			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/php:1": {
-			"version": "8.3",
-			"installComposer": true
-		}
+		"ghcr.io/devcontainers/features/git:1": {}
 	},
 
 	"customizations": {
