--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,9 @@
+includes:
+    - phpstan-baseline.neon
+
 parameters:
     level: 9
     paths:
         - src
         - tests
     tmpDir: build/phpstan
-    checkMissingIterableValueType: false
-    checkGenericClassInNonGenericObjectType: false
