Add missing composer commands

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,19 @@
             "PHPDice\\Tests\\": "tests/"
         }
     },
+    "scripts": {
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-html coverage/html",
+        "phpstan": "phpstan analyse",
+        "cs-check": "php-cs-fixer fix --dry-run --diff",
+        "cs-fix": "php-cs-fixer fix",
+        "ci": [
+            "@test",
+            "@phpstan",
+            "@cs-check"
+        ],
+        "fix-line-endings": "./scripts/fix-line-endings.sh"
+    },
     "config": {
         "sort-packages": true,
         "optimize-autoloader": true
