--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "cs-check": "php-cs-fixer fix --dry-run --diff",
         "cs-fix": "php-cs-fixer fix",
         "ci": [
-            "@test",
+            "@test-coverage",
             "@phpstan",
             "@cs-check"
         ],
