--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches: [ main, 001-dice-parser-roller ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
   test:
@@ -41,8 +39,8 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
       
-      - name: Run PHPUnit tests
-        run: composer test
+      - name: Run PHPUnit tests with coverage
+        run: composer test-coverage
       
       - name: Check code coverage threshold
         run: |
