--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "scripts": {
         "test": "phpunit",
-        "test-coverage": "phpunit --coverage-html coverage/html",
+        "test-coverage": "phpunit --coverage-clover=coverage.xml",
+        "test-coverage-html": "phpunit --coverage-html coverage/html",
         "phpstan": "phpstan analyse",
         "cs-check": "php-cs-fixer fix --dry-run --diff",
         "cs-fix": "php-cs-fixer fix",
