--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,10 @@ jobs:
         run: composer cs-check
 
       - name: Verify strict_types declarations
-        run: scripts/verify-strict-types.sh
+        run: chmod +x scripts/verify-strict-types.sh && scripts/verify-strict-types.sh
       
       - name: Run example scripts
-        run: scripts/run-examples.sh
+        run: chmod +x scripts/run-examples.sh && scripts/run-examples.sh
       
       - name: Upload coverage to Codecov (optional)
         if: github.event_name == 'push'
